<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="app1">Spotify Streamer</string>
    <string name="app2">Super Duo</string>
    <string name="app2a">Football Scores App</string>
    <string name="app2b">Library App</string>
    <string name="app3">Build It Bigger</string>
    <string name="app4">XYZ Reader</string>
    <string name="app5">Capstone: MY OWN APP</string>


</resources>
