<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.adupp.fawaz.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#f08c35">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#fbf8f8"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/app1"
        android:id="@+id/button_app1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="#06abf8" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/app2a"
        android:id="@+id/button_app2a"
        android:layout_below="@+id/button_app1"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_centerHorizontal="true"
        android:background="#06abf8"/>

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/app2b"
        android:id="@+id/button_app2b"
        android:layout_below="@+id/button_app2a"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_centerHorizontal="true"
        android:background="#06abf8" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/app3"
        android:id="@+id/button_app3"
        android:layout_below="@+id/button_app2b"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_centerHorizontal="true"
        android:background="#06abf8" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/app4"
        android:id="@+id/button_app4"
        android:layout_below="@+id/button_app3"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_centerHorizontal="true"
        android:background="#06abf8" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/app5"
        android:id="@+id/button_app5"
        android:layout_below="@+id/button_app4"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_centerHorizontal="true"
        android:background="#f50909" />


</RelativeLayout>
